# EcgLib

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ecglib/: __init__.py
ecglib/datasets/: __init__.py  datasets.py  load_datasets.py
ecglib/models/: __init__.py  create_model.py
ecglib/models/architectures/: densenet1d.py
ecglib/models/config/: model_configs.py
ecglib/models/weights/: model_weights_paths.yaml
ecglib/preprocessing/: __init__.py  composition.py  functional.py  preprocess.py
notebooks/: sssd_ecg_nle.ipynb
src/ecglib/: __init__.py
src/ecglib/data/: __init__.py  datasets.py  ecg_record.py  load_datasets.py
src/ecglib/models/: model_builder.py
src/ecglib/models/architectures/: cnn1d.py  cnn_tabular.py  densenet1d.py  double_cnn.py  model_types.py  registred_models.py  resnet1d.py  tabular.py
src/ecglib/models/architectures/sssd/: s4.py  sssd_ecg_nle.py  util.py
src/ecglib/models/architectures/sssd/extensions/cauchy/: cauchy.cpp  cauchy.py  map.h  setup.py
src/ecglib/models/config/: model_configs.py  registred_configs.py
src/ecglib/models/weights/: checkpoint.py  model_weights_paths.yaml
src/ecglib/predict/: predict.py
src/ecglib/preprocessing/: __init__.py  composition.py  functional.py  preprocess.py
