# -*- coding: utf-8 -*-

[metadata]
name = ecglib
version = 1.1.0
description = ECG library with pretrained models and tools for ECG analysis
license = Apache License 2.0
author = Aram Avetisyan
author_email = a.a.avetisyan@gmail.com
keywords = {"ecg analysis", "pytorch", "pretrained models", "ecg preprocessing", "ecg datasets"}
url = https://github.com/ispras/EcgLib

[options]
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    pandas>=1.5.2
    ecg_plot>=0.0.1
    tqdm>=4.64.0
    numpy>=1.2
    torch>=1.13.1
    fastai>=2.7.10
    neurokit2>=0.2.2
    scipy>=1.7.3
    ipywidgets>=7.6.5
    pyyaml>=6.0
    PyWavelets>=1.3.0
    wfdb>=4.0.0
    omegaconf>=2.3.0
python_requires = >=3.6

[options.packages.find]
where=src